sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
var temp:Int=0
var triee=false

def bubbleSort()  {
  while (!triee) {
    for (j<-1 to getNombreValeurs()-1){
      triee=true
      if (plusPetitQue(j,(j-1)){
        
        echange(j-1,j)
   
        triee=false
      }
      
     
    }
          
  }
}